--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 	<h3>Where?</h3>
 	<p>
 		The CTF is open to everyone and can be played online.
+		You do not need to pre-register for the event. 
+		A CTFtime.org account will be required to sign into the event
+		(make sure your team members have access!).
 	</p>
 	<p>
 		IRC channel for this event is <code>#allesctf</code> on
