--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>ALLES! CTF 2020</title>
 
 	<meta charset="utf-8"/>
+	
+	<meta http-equiv="refresh" content="0; URL=https://play.allesctf.net">
 
 	<script crossorigin="anonymous"
 	        integrity="sha384-9u9lzb/hr8e14GLHe5TEOrTiH3Qtw5DX2Zw9X/g7cqj81W2McEMx5CKOszxdb8jg"
