--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 	<title>ALLES! CTF 2020</title>
 
 	<meta charset="utf-8"/>
-	
-	<meta http-equiv="refresh" content="0; URL=https://play.allesctf.net">
 
 	<script crossorigin="anonymous"
 	        integrity="sha384-9u9lzb/hr8e14GLHe5TEOrTiH3Qtw5DX2Zw9X/g7cqj81W2McEMx5CKOszxdb8jg"
@@ -58,50 +56,8 @@
 	<!--<img src="camp2019.png" alt="CCCamp 2019 logo" class="camp-logo"/>-->
 	<h1 class="pf-c-title pf-m-3xl">ALLES! CTF 2020</h1>
 	<p>
-		<a href="https://ctftime.org/team/18419" target="_blank"><img src="alles.png" alt="ALLES" class="alles-logo"/></a> is looking forward to host
-		<a href="https://ctftime.org/event/1091" target="_blank">this year's ALLES! CTF</a>.
+		Thanks for playing! See you in 2021.
 	</p>
-	<h3>When?</h3>
-	<p>
-		<b>Begin</b>: Fri, 04 Sep 2020 16:00 UTC
-		<br/>
-		<b>End</b>: Sun, 06 Sep 2020 16:00 UTC (48 hours)
-	</p>
-	<h3>Where?</h3>
-	<p>
-		The CTF is open to everyone and can be played online.
-		You do not need to pre-register for the event. 
-		A CTFtime.org account will be required to sign into the event
-		(make sure your team members have access!).
-	</p>
-	<p>
-		IRC channel for this event is <code>#allesctf</code> on
-		<a href="https://hackint.org/" target="_blank">irc.hackint.org</a>
-		(<a href="https://webirc.hackint.org/#irc://irc.hackint.org/#allesctf">WebIRC</a>).
-	</p>
-	<h3>What?</h3>
-	<p>
-		We prepared typical challenges in the classic categories (Reversing, Forensics, Crypto,
-		Web, Pwning, Devops, and Misc), plus some weird stuff you didn't expect!
-
-		If you have played last year's Chaos Communication Camp CTF, you know what to expect.
-	</p>
-	<!--
-	<h2>Sponsors</h2>
-	<img src="packet.png" class="sponsr-logo"/><br/>
-	<p>
-		<a href="https://packet.net" target="_blank">Packet.net</a> is the world's leading provider for bare
-		metal cloud servers and sponsors this CTF's infrastructure.
-		Our CTF platform uses lightweight virtual machines for many challenges.
-		This allows us to build stateful challenges involving kernel exploitation and virtual networks.
-	</p>
-	<p>
-		<img src="nexantic.svg" class="sponsr-logo"/>
-	</p>
-	<p>
-		nexantic GmbH is a startup founded by multiple ALLES team members.
-	</p>
-	-->
 </div>
 </body>
 </html>
