--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         </p>
         <h3>What?</h3>
         <p>
-            We prepared typical challenges in the classic categories (Reversing, Forensics, Crypto, Web, Pwning, Devops,
+            We prepared typical challenges in the classic categories (Reversing, Crypto, Web, Pwning, <span
+                style="white-space: nowrap; font-style: italic;">B L O C K C H A I N</span>
             and Misc), plus some weird stuff you didn't expect! If you have played last year's ALLES! CTF 2020, you know
             what to expect.
         </p>
