--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-<meta http-equiv="refresh" content="0; url=https://play.allesctf.net/" />
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>CCCamp CTF 2023</title>
+
+    <meta charset="utf-8" />
+
+    <script crossorigin="anonymous" integrity="sha384-9u9lzb/hr8e14GLHe5TEOrTiH3Qtw5DX2Zw9X/g7cqj81W2McEMx5CKOszxdb8jg"
+        src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-/eiBF8CfA11kqrgNAge91jcdrE+ZWV3RARGT3l/O2BmwDF5/sjb0NVTrYMXw3LlT"
+        src="https://unpkg.com/lodash@4.17.11/lodash.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-U/+EF1mNzvy5eahP9DeB32duTkAmXrePwnRWtuSh1C/bHHhyR1KZCr/aGZBkctpY"
+        src="https://unpkg.com/axios@0.18.0/dist/axios.min.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/@patternfly/patternfly@2.6.5/patternfly.min.css" rel="stylesheet">
+
+    <style>
+        .pf-c-content {
+            padding: 20px 15px 60px;
+            padding-top: 100px;
+            max-width: 700px;
+            margin: auto;
+        }
+
+        .camp-logo {
+            padding-right: auto;
+            max-width: 250px;
+        }
+
+        .sponsr-logo {
+            padding-right: auto;
+            max-width: 150px;
+        }
+
+        .alles-logo {
+            position: relative;
+            top: 5px;
+            max-height: 1.5em;
+        }
+
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="pf-c-content">
+        <!--<img src="camp2019.png" alt="CCCamp 2019 logo" class="camp-logo"/>-->
+        <h1 class="pf-c-title pf-m-3xl">CCAMP CTF 2023</h1>
+        <p>
+            <a href="https://ctftime.org/team/18419" target="_blank"><img src="alles.png" alt="ALLES"
+                    class="alles-logo" /></a> is looking forward to host
+            <a href="https://ctftime.org/event/1313" target="_blank">this year's CCCAMP CTF</a>.
+        </p>
+        <h3>When?</h3>
+        <p>
+            <b>Begin</b>: Wed, 16 Aug 2023 10:00 UTC
+            <br />
+            <b>End</b>: Fri, 17 Aug 2023 22:00 UTC (36 hours)
+        </p>
+        <h3>Where?</h3>
+        <p>
+            The CTF is open to everyone and can be played online. You do not need to pre-register for the event. A
+            CTFtime.org account will be required to sign into the event (make sure your team members have access!).
+        </p>
+        <p>
+            Communication for this event will happen on <a href="https://discord.gg/h2tRFDk6Fy">Discord</a>.
+        </p>
+        <h3>What?</h3>
+        <p>
+            We prepared typical challenges in the classic categories (Reversing, Crypto, Web, Pwning, <span
+                style="white-space: nowrap; font-style: italic;">Game Hacking</span>
+            and Misc)
+        </p>
+        <!--
+	<h2>Sponsors</h2>
+	<img src="packet.png" class="sponsr-logo"/><br/>
+	<p>
+		<a href="https://packet.net" target="_blank">Packet.net</a> is the world's leading provider for bare
+		metal cloud servers and sponsors this CTF's infrastructure.
+		Our CTF platform uses lightweight virtual machines for many challenges.
+		This allows us to build stateful challenges involving kernel exploitation and virtual networks.
+	</p>
+	<p>
+		<img src="nexantic.svg" class="sponsr-logo"/>
+	</p>
+	<p>
+		nexantic GmbH is a startup founded by multiple ALLES team members.
+	</p>
+	-->
+    </div>
+</body>
+
+</html>
