come to village

--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
         <h3>Where?</h3>
         <p>
             The CTF is open to everyone and can be played online. You do not need to pre-register for the event. A
-            CTFtime.org account will be required to sign into the event (make sure your team members have access!).
+            CTFtime.org account will be required to sign into the event (make sure your team members have access!). <br><br>
+            We will be at Camp in our ALLES! Village. You are welcome to come and sit down at the village.
         </p>
         <p>
             Communication for this event will happen on <a href="https://discord.gg/h2tRFDk6Fy">Discord</a>.
