add sponsor slot

--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
         <h3>Where?</h3>
         <p>
             The CTF is open to everyone and can be played online. You do not need to pre-register for the event. A
-            CTFtime.org account will be required to sign into the event (make sure your team members have access!). <br><br>
+            CTFtime.org account will be required to sign into the event (make sure your team members have access!).
+            <br><br>
             We will be at Camp in our ALLES! Village. You are welcome to come and sit down at the village.
         </p>
         <p>
@@ -220,22 +221,14 @@
                 style="white-space: nowrap; font-style: italic;">Game Hacking</span>
             and Misc)
         </p>
-        <!--
-	<h2>Sponsors</h2>
-	<img src="packet.png" class="sponsr-logo"/><br/>
-	<p>
-		<a href="https://packet.net" target="_blank">Packet.net</a> is the world's leading provider for bare
-		metal cloud servers and sponsors this CTF's infrastructure.
-		Our CTF platform uses lightweight virtual machines for many challenges.
-		This allows us to build stateful challenges involving kernel exploitation and virtual networks.
-	</p>
-	<p>
-		<img src="nexantic.svg" class="sponsr-logo"/>
-	</p>
-	<p>
-		nexantic GmbH is a startup founded by multiple ALLES team members.
-	</p>
-	-->
+        <h2>Sponsors</h2>
+        <img src="Equinix Metal Standard RGB.png" class="sponsr-logo" /><br />
+        <p>
+            <a href="https://www.equinix.de" target="_blank">equinix.de</a> is the world's leading provider for bare
+            metal cloud servers and sponsors this CTF's infrastructure.
+            Our CTF platform uses lightweight virtual machines for many challenges.
+            This allows us to build stateful challenges involving kernel exploitation and virtual networks.
+        </p>
         <div id="cake_container">
             <div class="cake">
 
