--- a/index.html
+++ b/index.html
@@ -4,264 +4,10 @@
 <head>
     <title>CCCamp CTF 2023</title>
 
-    <meta charset="utf-8" />
-
-    <script crossorigin="anonymous" integrity="sha384-9u9lzb/hr8e14GLHe5TEOrTiH3Qtw5DX2Zw9X/g7cqj81W2McEMx5CKOszxdb8jg"
-        src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-/eiBF8CfA11kqrgNAge91jcdrE+ZWV3RARGT3l/O2BmwDF5/sjb0NVTrYMXw3LlT"
-        src="https://unpkg.com/lodash@4.17.11/lodash.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-U/+EF1mNzvy5eahP9DeB32duTkAmXrePwnRWtuSh1C/bHHhyR1KZCr/aGZBkctpY"
-        src="https://unpkg.com/axios@0.18.0/dist/axios.min.js"></script>
-
-    <link href="https://cdn.jsdelivr.net/npm/@patternfly/patternfly@2.6.5/patternfly.min.css" rel="stylesheet">
-
-    <style>
-        body {
-            overflow: hidden;
-        }
-
-        .pf-c-content {
-            padding: 20px 15px 60px;
-            padding-top: 100px;
-            max-width: 700px;
-            margin: auto;
-        }
-
-        .camp-logo {
-            padding-right: auto;
-            max-width: 250px;
-        }
-
-        .sponsr-logo {
-            padding-right: auto;
-            max-width: 150px;
-        }
-
-        .alles-logo {
-            position: relative;
-            top: 5px;
-            max-height: 1.5em;
-        }
-
-        .center {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 50%;
-        }
-
-        .cake {
-            opacity: 0;
-            width: 16px;
-            height: 32px;
-            scale: 2;
-            animation: playXCake 0.5s steps(6) infinite, moveCake 20s infinite linear, rotateCake 20s infinite;
-            position: absolute;
-        }
-
-        #cake_container .cake:nth-child(1) {
-            animation-delay: calc(2s * 0);
-        }
-
-        #cake_container .cake:nth-child(2) {
-            animation-delay: calc(2s * 1);
-        }
-
-        #cake_container .cake:nth-child(3) {
-            animation-delay: calc(2s * 2);
-        }
-
-        #cake_container .cake:nth-child(4) {
-            animation-delay: calc(2s * 3);
-        }
-
-        #cake_container .cake:nth-child(5) {
-            animation-delay: calc(2s * 4);
-        }
-
-        #cake_container .cake:nth-child(6) {
-            animation-delay: calc(2s * 5);
-        }
-
-        #cake_container .cake:nth-child(7) {
-            animation-delay: calc(2s * 6);
-        }
-
-        #cake_container .cake:nth-child(8) {
-            animation-delay: calc(2s * 7);
-        }
-
-        #cake_container .cake:nth-child(9) {
-            animation-delay: calc(2s * 8);
-        }
-
-        #cake_container .cake:nth-child(10) {
-            animation-delay: calc(2s * 9);
-        }
-
-        @keyframes playXCake {
-            from {
-                background-position-x: 0px;
-                opacity: 1;
-            }
-
-            to {
-                background-position-x: 96px;
-                opacity: 1;
-            }
-        }
-
-        @keyframes moveCake {
-            0% {
-                top: 8px;
-                left: 8px;
-            }
-
-            24.99% {
-                top: calc(100% - 48px);
-                left: 8px;
-            }
-
-            25% {
-                top: calc(100% - 48px);
-                left: 8px;
-            }
-
-            49.99% {
-                top: calc(100% - 48px);
-                left: calc(100% - 24px);
-            }
-
-            50% {
-                top: calc(100% - 48px);
-                left: calc(100% - 24px);
-            }
-
-            74.99% {
-                top: 8px;
-                left: calc(100% - 24px);
-            }
-
-            75% {
-                top: 8px;
-                left: calc(100% - 24px);
-            }
-
-
-            100% {
-                top: 8px;
-                left: 8px;
-            }
-        }
-
-        @keyframes rotateCake {
-            0% {
-                background-image: url("sprites/player_south.png");
-            }
-
-            24.99% {
-                background-image: url("sprites/player_south.png");
-            }
-
-            25% {
-                background-image: url("sprites/player_east.png");
-            }
-
-            49.99% {
-                background-image: url("sprites/player_east.png");
-            }
-
-            50% {
-                background-image: url("sprites/player_north.png");
-            }
-
-            74.99% {
-                background-image: url("sprites/player_north.png");
-            }
-
-            75% {
-                background-image: url("sprites/player_west.png");
-            }
-
-            100% {
-                background-image: url("sprites/player_west.png");
-            }
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; url=https://play.camp.allesctf.net/" />
 </head>
 
 <body>
-    <div class="pf-c-content">
-        <!--<img src="camp2019.png" alt="CCCamp 2019 logo" class="camp-logo"/>-->
-        <h1 class="pf-c-title pf-m-3xl">CCAMP CTF 2023</h1>
-        <p>
-            <a href="https://ctftime.org/team/18419" target="_blank"><img src="alles.png" alt="ALLES"
-                    class="alles-logo" /></a> is looking forward to host
-            <a href="https://ctftime.org/event/1313" target="_blank">this year's CCCAMP CTF</a>.
-        </p>
-        <h3>When?</h3>
-        <p>
-            <b>Begin</b>: Wed, 16 Aug 2023 10:00 UTC
-            <br />
-            <b>End</b>: &emsp;&nbsp;Thu, 17 Aug 2023 22:00 UTC (36 hours)
-        </p>
-        <h3>Where?</h3>
-        <p>
-            The CTF is open to everyone and can be played online. You do not need to pre-register for the event. A
-            CTFtime.org account will be required to sign into the event (make sure your team members have access!).
-            <br><br>
-            We will be at Camp in our ALLES! Village. You are welcome to come and sit down at the village.
-        </p>
-        <p>
-            Communication for this event will happen on <a href="https://discord.gg/h2tRFDk6Fy">Discord</a>.
-        </p>
-        <h3>What?</h3>
-        <p>
-            We prepared typical challenges in the classic categories (Reversing, Crypto, Web, Pwning, <span
-                style="white-space: nowrap; font-style: italic;">Game Hacking</span>
-            and Misc)
-        </p>
-        <h2>Sponsors</h2>
-        <img src="Equinix Metal Standard RGB.png" class="sponsr-logo" /><br />
-        <p>
-            <a href="https://www.equinix.de" target="_blank">equinix.de</a> is the world's leading provider for bare
-            metal cloud servers and sponsors this CTF's infrastructure.
-            Our CTF platform uses lightweight virtual machines for many challenges.
-            This allows us to build stateful challenges involving kernel exploitation and virtual networks.
-        </p>
-        <div id="cake_container">
-            <div class="cake">
-
-            </div>
-            <div class="cake">
-
-            </div>
-            <div class="cake">
-
-            </div>
-            <div class="cake">
-
-            </div>
-            <div class="cake">
-
-            </div>
-            <div class="cake">
-
-            </div>
-            <div class="cake">
-
-            </div>
-            <div class="cake">
-
-            </div>
-            <div class="cake">
-
-            </div>
-            <div class="cake">
-
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
